@@ -82,7 +82,7 @@ function client_generatePage($tpl)
 			)
 		);
 
-		set_page_message(tr('No hosting plan available.'), 'info');
+		set_page_message(tr('No hosting plan available.'), 'static_info');
 	} else {
 		$tpl->assign(
 			array(
